# hot_dog

./: Cargo.toml  Dioxus.toml  README.md  hotdog.db  package.json  pnpm-lock.yaml  tailwind.config.js
assets/: main.css  tailwind.css
src/: backend.rs  components.rs  main.rs
src/components/: delete_button.rs  dog_card.rs  dog_view.rs  favorite_card.rs  favorites.rs  nav.rs  routes.rs  tab.rs  tabs.rs  view.rs
